Fixed grammatical error in `sbuf` man page.

--- a/man/sbuf.3
+++ b/man/sbuf.3
@@ -457,7 +457,7 @@ drain error, and zero otherwise.
 .Pp
 The
 .Fn sbuf_finish
-function returns zero for success and \-1 and set
+function returns zero for success and \-1 and sets
 .Va errno
 on error.
 .Pp
